renamed application to NuBippy

--- a/nubippy.kv
+++ b/nubippy.kv
@@ -11,7 +11,7 @@
 	        title: app.get_string('Main_Title')
 	        on_release: root.reset_ui()
 
-	    ActionToggleButton:
-	        id: topInfoButton
-	        icon: 'res/icons/info.png'
-	        on_release: app.toggle_info()
+	    #ActionToggleButton:
+	    #    id: topInfoButton
+	    #    icon: 'res/icons/info.png'
+	    #    on_release: app.toggle_info()
