small changes made to each file to accomodate the addition of new Home and vanity screens

--- a/screens/ResultsScreen.kv
+++ b/screens/ResultsScreen.kv
@@ -58,6 +58,21 @@
 				multiline: False
 
 			Label:
+				id: addressLabel
+				size_hint: (None, None)
+				width: 100
+				height: 30
+				pos: (40, 80)
+
+			TextInput:
+				id: addressField
+				size_hint: (None, None)
+				width: 400
+				height: 30
+				pos: (180, 80)
+				multiline: False
+
+			Label:
 				id: bottomLabel
 				size_hint: (None, None)
 				width: 100
