--- a/nubippy.kv
+++ b/nubippy.kv
@@ -1,5 +1,24 @@
+#:import Factory kivy.factory.Factory
+
 <Widget>:
 	font_name:'res/fonts/Roboto-Medium.ttf'
+
+<ActionSpinnerOptions@SpinnerOption>
+    background_color: .4, .4, .4, 1
+
+<ActionSpinner@Spinner+ActionItem>
+    canvas.before:
+        Color:
+            rgba: 0.128, 0.128, 0.128, 1
+        Rectangle:
+            size: self.size
+            pos: self.pos
+    border: 27, 20, 12, 12
+    background_normal: 'atlas://data/images/defaulttheme/action_group'
+	option_cls: Factory.ActionSpinnerOptions
+
+<ActionDropdown>:
+    on_size: self.width = '220dp'
 
 <TopActionBar>:
 
@@ -15,4 +34,20 @@
 	        title: app.get_string('Main_Title')
 	        on_release: root.reset_ui()
 	        background_down: 'res/images/branding/red.png'
+
+		ActionSpinner:
+	        id: actionSpinner
+	        important: True
+	        text: app.get_string('Action_Title')
+	        values: [app.get_string('Private_Key_Screen'), app.get_string('Vanity_Screen')]
+	        on_text: root.switch_screen(self.text)
+
+		ActionSpinner:
+	        id: currencySpinner
+	        important: True
+	        text: app.get_string('No_Currency_Selected')
+	        values: [app.get_string('Nubits'), app.get_string('Nushares')]
+	        disabled: True
+	        on_text: root.set_currency(self.text)
+
 
