updated results screen to have readonly text inputs that allow copying. prevents altering the address or private key while still allowing copying. Also changed the name of each screen to use the language file.

--- a/screens/HomeScreen.kv
+++ b/screens/HomeScreen.kv
@@ -7,7 +7,7 @@
             pos: self.pos
             size: self.size
 
-	name: 'Home Screen'
+	name: app.get_string('Home_Screen')
 
 	BoxLayout:
 		id: hSBoxLayout
