--- a/screens/PrivateKeyScreen.kv
+++ b/screens/PrivateKeyScreen.kv
@@ -10,7 +10,7 @@
             pos: self.pos
             size: self.size
 
-	name: 'Private Key'
+	name: app.get_string('Private_Key_Screen')
 
 	BoxLayout:
 		orientation: 'horizontal'
