--- a/screens/VanityScreen.kv
+++ b/screens/VanityScreen.kv
@@ -10,7 +10,7 @@
             pos: self.pos
             size: self.size
 
-	name: 'Vanity Address'
+	name: app.get_string('Vanity_Screen')
 
 	BoxLayout:
 		orientation: 'horizontal'
