added 'case insensitive' search ability to VanityGen. Case insensitive serahces are generally faster. Will try to add regex searches too but they lock up the UI currently. need to tweak the vanitygen code.

--- a/nubippy.kv
+++ b/nubippy.kv
@@ -29,7 +29,7 @@
 
 	    ActionPrevious:
 	        id: topActionPrevious
-	        with_previous: True
+	        with_previous: False
 	        app_icon: 'res/icons/nu.png'
 	        title: app.get_string('Main_Title')
 	        on_release: root.reset_ui()
