--- a/screens/VanityScreen.kv
+++ b/screens/VanityScreen.kv
@@ -32,7 +32,7 @@
 				size_hint: (None, None)
 				width: 100
 				height: 30
-				pos: (120, 130)
+				pos: (120, 110)
 				text: app.get_string('Vanity_Text')
 
 			TextInput:
@@ -40,7 +40,7 @@
 				size_hint: (None, None)
 				width: 450
 				height: 30
-				pos: (250, 130)
+				pos: (250, 110)
 				multiline: False
 				focus: True
 
@@ -53,6 +53,42 @@
 				text: app.get_string('Submit_Label')
 				on_press:
 					root.submit_vanity(vanityInput.text)
+
+			Label:
+				id: caseLabel
+				size_hint: (None, None)
+				width: 100
+				height: 40
+				pos: (90, 73)
+				font_size: 11
+				text: app.get_string('Case_Insensitive_Search')
+				text_size: self.size
+
+			CheckBox:
+				id: caseCheck
+				size_hint: (None, None)
+				width: 10
+				height: 10
+				pos: (65, 75)
+				group: 'options'
+
+			Label:
+				id: regexLabel
+				size_hint: (None, None)
+				width: 100
+				height: 40
+				pos: (90, 43)
+				font_size: 11
+				text: app.get_string('Regex_Search')
+				text_size: self.size
+
+			CheckBox:
+				id: regexCheck
+				size_hint: (None, None)
+				width: 10
+				height: 10
+				pos: (65, 45)
+				group: 'options'
 
 			Button:
 				id: abortButton
